@@ -226,8 +226,10 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_display.html#set_palette>pygame.display.set_palette</a> - set the palette<br>
 <a href=ref/pygame_display.html#toggle_fullscreen>pygame.display.toggle_fullscreen</a> - switch the display fullscreen mode<br>
 <a href=ref/pygame_display.html#update>pygame.display.update</a> - update an area of the display<br>
+<a href=ref/pygame_draw.html#ellipse>pygame.draw.ellipse</a> - draw an ellipse on a surface<br>
 <a href=ref/pygame_draw.html#line>pygame.draw.line</a> - draw a line on a surface<br>
 <a href=ref/pygame_draw.html#lines>pygame.draw.lines</a> - draw multiple connected lines on a surface<br>
+<a href=ref/pygame_draw.html#polygon>pygame.draw.polygon</a> - draw multiple connected lines on a surface<br>
 <a href=ref/pygame_event.html#Event>pygame.event.Event</a> - create new event object<br>
 <a href=ref/pygame_event.html#event_name>pygame.event.event_name</a> - name for event type<br>
 <a href=ref/pygame_event.html#get>pygame.event.get</a> - get all of an event type from the queue<br>
